--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@microsoft/applicationinsights-web": "^2.7.0",
     "axios": "^0.21.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
